hphp/test/zend/bad/ext/sqlite3/tests/sqlite3_11_numrows.php.skipif
<?php require_once(dirname(__FILE__) . '/skipif.inc');
// Create an instance of the ReflectionMethod class
try {
	$method = new ReflectionMethod('sqlite3result', 'numRows');
} catch (ReflectionException $e) {
	die("skip");
}
?>